[front] fix: TrackSummary area overflow ...
to channels area when inner contents are too wide.

--- a/src/components/MainViewer/TrackSummary.scss
+++ b/src/components/MainViewer/TrackSummary.scss
@@ -2,6 +2,7 @@
 
 // track summary
 .TrackSummary {
+  overflow: hidden;
   flex: 1 1;
   padding: $spacer-3;
 
